--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.49.4",
+    "stripe": "^14.0.0",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
